test/pos/ebind-01.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 Int)(x1 Int)(m Int)) (=> (= _VV##1 (+ m 1)) (= _VV##1 x1))))
(constraint (forall ((_VV##2 Int)(x1 Int)(m Int)) (=> (= _VV##2 (+ x1 1)) (= _VV##2 (+ 2 m)))))

